--- a/templates/accounts/user_login.html
+++ b/templates/accounts/user_login.html
@@ -9,15 +9,39 @@
   </h1>
 </div>
 
-<form method="post" class="form" enctype="multipart/form-data" >
-  {% csrf_token %}
-  
-  {% bootstrap_form form %}
+<form method="post" class="form" id="login-form" enctype="multipart/form-data" >
+    {% csrf_token %}
+
+    {% bootstrap_form form %}
+
+    <div class="form-group">
+        <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% trans "Login" %}">
+    </div>
+
+    <div class="form-group">
+        <span class="btn btn-success btn-lg verify-acc hidden login-otp">
+            {% trans "Login with SMS Token"%}
+        </span>
+    </div>
+
+    {% include "accounts/partials/recaptcha.html" %}
+
+    <div class="form-group">
+        <span class="btn btn-primary create-acc send-otp">
+            {% trans "Send SMS with One Time Password"%}
+        </span>
+    </div>
+
+    <div class="form-group">
+        <span class="btn btn-danger create-acc resend-otp hidden">
+            {% trans "Resend SMS with new One Time Password" %}
+        </span>
+    </div>
 
 
-  <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% trans "Login" %}">
-  <input type="hidden" name="next" value="{{ next }}" />
+    <input type="hidden" name="next" value="{{ next }}" />
 </form>
+
 <div class="p-list">
     <p>{% trans "Don't have an account?" %} <a class="nav-link" href="{% url 'accounts.register' %}">{% trans "Register here" %}</a></p>
     <p>{% trans "Forgot your password?" %} <a class="nav-link" href="{% url 'accounts.password_reset' %}">{% trans "Reset it here" %}</a></p>
