--- a/templates/accounts/user_login.html
+++ b/templates/accounts/user_login.html
@@ -27,4 +27,7 @@
     <p>{% trans "Don't have an account?" %} <a class="nav-link" href="{% url 'accounts.register' %}">{% trans "Register here" %}</a></p>
     <p>{% trans "Forgot your password?" %} <a class="nav-link" href="{% url 'accounts.password_reset' %}">{% trans "Reset it here" %}</a></p>
 </div>
+<a class="btn btn-social btn-twitter" href="{% url 'social:begin' 'twitter' %}">
+    <span class="fa fa-twitter"></span> {% trans "Sign in with Twitter" %}
+</a>
 {% endblock %}
