--- a/templates/accounts/user_login.html
+++ b/templates/accounts/user_login.html
@@ -27,7 +27,12 @@
     <p>{% trans "Don't have an account?" %} <a class="nav-link" href="{% url 'accounts.register' %}">{% trans "Register here" %}</a></p>
     <p>{% trans "Forgot your password?" %} <a class="nav-link" href="{% url 'accounts.password_reset' %}">{% trans "Reset it here" %}</a></p>
 </div>
-<a class="btn btn-social btn-twitter" href="{% url 'social:begin' 'twitter' %}">
-    <span class="fa fa-twitter"></span> {% trans "Sign in with Twitter" %}
-</a>
+<div class="p-list">
+    <p><a class="btn btn-social btn-twitter" href="{% url 'social:begin' 'twitter' %}">
+        <span class="fa fa-twitter"></span> {% trans "Sign in with Twitter" %}
+    </a></p>
+    <p><a class="btn btn-social btn-facebook" href="{% url 'social:begin' 'facebook' %}">
+        <span class="fa fa-facebook"></span> {% trans "Sign in with Facebook" %}
+    </a></p>
+</div>
 {% endblock %}
