--- a/templates/accounts/user_login.html
+++ b/templates/accounts/user_login.html
@@ -28,11 +28,17 @@
     <p>{% trans "Forgot your password?" %} <a class="nav-link" href="{% url 'accounts.password_reset' %}">{% trans "Reset it here" %}</a></p>
 </div>
 <div class="p-list">
-    <p><a class="btn btn-social btn-twitter" href="{% url 'social:begin' 'twitter' %}">
+    <p><a class="btn btn-social btn-twitter" href="{% url 'oauth.social:begin' 'twitter' %}">
         <span class="fa fa-twitter"></span> {% trans "Sign in with Twitter" %}
     </a></p>
-    <p><a class="btn btn-social btn-facebook" href="{% url 'social:begin' 'facebook' %}">
+    <p><a class="btn btn-social btn-facebook" href="{% url 'oauth.social:begin' 'facebook' %}">
         <span class="fa fa-facebook"></span> {% trans "Sign in with Facebook" %}
+    </a></p>
+    <p><a class="btn btn-social btn-github" href="{% url 'oauth.social:begin' 'github' %}">
+        <span class="fa fa-github"></span> {% trans "Sign in with Github" %}
+    </a></p>
+    <p><a class="btn btn-social btn-google" href="{% url 'oauth.social:begin' 'google-oauth2' %}">
+        <span class="fa fa-github"></span> {% trans "Sign in with Google" %}
     </a></p>
 </div>
 {% endblock %}
