fix google button

--- a/templates/accounts/user_login.html
+++ b/templates/accounts/user_login.html
@@ -38,7 +38,7 @@
         <span class="fa fa-github"></span> {% trans "Sign in with Github" %}
     </a></p>
     <p><a class="btn btn-social btn-google" href="{% url 'oauth.social:begin' 'google-oauth2' %}">
-        <span class="fa fa-github"></span> {% trans "Sign in with Google" %}
+        <span class="fa fa-google"></span> {% trans "Sign in with Google" %}
     </a></p>
 </div>
 {% endblock %}
