--- a/templates/accounts/partials/user_profile_referral.html
+++ b/templates/accounts/partials/user_profile_referral.html
@@ -1,5 +1,6 @@
 {% load bootstrap3 %}
 {% load i18n %}
+{% include 'referrals/partials/modals/new_referral_code.html' with id='new-referral-code-modal'%}
 
 <form method="post" action="{% url 'accounts.referral_update'%}" class="form" enctype="multipart/form-data" action="">
     {% csrf_token %}
@@ -11,9 +12,7 @@
         {% bootstrap_form referral_form %}
     {% endfor %}
 
-    <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="Update Refferrals">
-    <input type="submit" class="btn btn-primary btn-lg" formmethod="post"
-           formaction="{% url 'referrals.code_new'%}"
-           value="{% trans 'Create New Referral' %}">
+        <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="Update Refferrals">
+        <input type="button" id="new-referral-code" class="btn btn-primary btn-lg" value="{% trans 'New Referral Code' %}">
 </form>
 
