Login with Email (#291)
* selenium timing hack

* AuthMessages client (shared logic for send_auth_sms/send_auth_email)

* WIP: frontend mockup for email-verification

* WIP: email verification login on order creation

* profile.phone unique

* login_email(replace login_phone) to exchange_orders selenium tests

* patch email seemless login to phone login backend tests

* seemles login with email: test profile.disabled after login

* Email login on Login OTP

* Selenium Test for email OTP login; remove ES6 includes function from main.js because phantomjs driver is not compatible with it

* change selenium tests self.phone (unique contrain error)

* rebase fixes

--- a/static/css/old.css
+++ b/static/css/old.css
@@ -159,6 +159,10 @@ html body .ui-state-default{
     text-align: center;
 }
 
+.text-center input {
+    text-align: center;
+}
+
 .register input {
     margin-top: 2px;
 }
