--- a/templates/accounts/user_login.html
+++ b/templates/accounts/user_login.html
@@ -20,7 +20,7 @@
 
     <div class="form-group">
         <span class="btn btn-success btn-lg verify-acc hidden login-otp">
-            {% trans "Login with SMS Token"%}
+            {% trans "Login with One Time Password"%}
         </span>
     </div>
 
@@ -28,13 +28,13 @@
 
     <div class="form-group">
         <span class="btn btn-primary create-acc send-otp">
-            {% trans "Send SMS with One Time Password"%}
+            {% trans "Send One Time Password"%}
         </span>
     </div>
 
     <div class="form-group">
         <span class="btn btn-danger create-acc resend-otp hidden">
-            {% trans "Resend SMS with new One Time Password" %}
+            {% trans "Resend One Time Password" %}
         </span>
     </div>
 
