--- a/templates/accounts/partials/user_profile_info.html
+++ b/templates/accounts/partials/user_profile_info.html
@@ -30,7 +30,7 @@
                 <div class="input-group">
                     <input type="text" aria-label={% trans "Insert SMS verification token here" %} placeholder={% trans "Insert SMS verification token here" %} class="form-control" id="verification_code">
                     <div class="input-group-btn">
-                        <button data-url="{% url 'accounts.verify_phone' %}" class="btn btn-default" type="button" id="verify_phone_now">{% trans "Verify phone now" %}</button>
+                        <button data-url="{% url 'accounts.verify_user' %}" class="btn btn-default" type="button" id="verify_phone_now">{% trans "Verify phone now" %}</button>
                     </div>
                 </div>
             </div>
