--- a/templates/referrals/partials/modals/new_referral_code.html
+++ b/templates/referrals/partials/modals/new_referral_code.html
@@ -7,7 +7,7 @@
 <form id="new-referral-code-form" class="card-form" enctype="multipart/form-data" action="">
     {% csrf_token %}
     <div class="form-group">
-        <input type="text" name="code_new" class="form-control" placeholder="{% trans 'Random Referral Code' %}">
+        <input type="text" name="code_new" id="code_new" class="form-control" placeholder="{% trans 'Random Referral Code' %}">
     </div>
 
     <div class="form-group">
