Update base.html (#309)

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -10,7 +10,7 @@
     <meta name="description" content="{% trans 'Simple and powerful Bitcoin, Ethereum and Litecoin exchange' %}">
     <meta name="author" content="Nexchange">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>{% trans 'Nexchange BETA' %} {{ debug }}</title>
+    <title>{% trans 'Nexchange BETA' %}</title>
 
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="{% static 'images/icon.png'%}">
