WIP: pair selection buttons and js

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1531,3 +1531,7 @@ li.select2-results__option:first {
     max-width: 100%;
     padding: 2px;
 }
+
+.select2-container--default .select2-results__option[aria-disabled=true] {
+    display: none;
+}
