--- a/templates/payments/partials/forms/card.html
+++ b/templates/payments/partials/forms/card.html
@@ -7,13 +7,13 @@
     <div class="row">
         <div class="col col-lg-10 col-lg-offset-1 panel">
             <div class="col col-sm-5 col-sm-offset-1 pay-row">
-                <input class="iban account-number"
+                <input class="account-number val"
                        placeholder="{% trans "Card number" %}"
                        type="text" name="number">
             </div>
             <div class="col col-sm-5 pay-row">
                 <input placeholder="{% trans "Full name" %}" type="text"
-                       value="Ivan Ivanov" name="name" class="iban val">
+                       value="Ivan Ivanov" name="name" class="owner val">
             </div>
         </div>
     </div>
