Email otp first (#368)
* Email otp first

* sleep on otp

* Fix Pair disabling mechanism

* Fix main view pair selection, and order list number format

--- a/templates/orders/partials/order_row_desktop.html
+++ b/templates/orders/partials/order_row_desktop.html
@@ -14,8 +14,8 @@
         <td>{{ order.created_on |date:"D d M"}}</td>
         <td>{{ order.unique_reference }}</td>
         <td>{{ order.pair.name }}</td>
-        <td>{{ order.amount_quote | floatformat:2}}</td>
-        <td>{{ order.amount_base }}</td>
+        <td>{{ order.amount_quote.normalize}}</td>
+        <td>{{ order.amount_base.normalize }}</td>
         <td>
         {% include 'orders/partials/forms/payment_toggle.html' %}
         </td>
