--- a/templates/orders/partials/steps/partials/step_authentification_buttons.html
+++ b/templates/orders/partials/steps/partials/step_authentification_buttons.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 
 <div class="col-xs-10 col-xs-offset-1 center controls">
-    <span class="btn btn-primary create-acc send disabled phone-verification">
+    <span class="btn btn-primary create-acc send disabled phone-verification hidden">
         {% trans "Send SMS"%}
     </span>
-    <span class="btn btn-primary create-acc send disabled email-verification hidden">
+    <span class="btn btn-primary create-acc send disabled email-verification">
         {% trans "Send Email"%}
     </span>
     <span class="btn btn-danger create-acc resend hidden">
@@ -15,10 +15,10 @@
     </span>
 </div>
 <div class="col-xs-10 col-xs-offset-1 center controls">
-    <span class="btn-sm btn-link switch-login phone-verification">
+    <span class="btn-sm btn-link switch-login phone-verification hidden">
         {% trans "Use Email for verification"%}
     </span>
-    <span class="btn-sm btn-link switch-login email-verification hidden">
+    <span class="btn-sm btn-link switch-login email-verification">
         {% trans "Use Phone for verification"%}
     </span>
 </div>
