--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -1,12 +1,12 @@
 {% load i18n %}
 
 <h4>
-    <p class="phone-verification">{% trans "Phone verification"%}</p>
-    <p class="email-verification hidden">{% trans "Email verification"%}</p>
+    <p class="phone-verification hidden">{% trans "Phone verification"%}</p>
+    <p class="email-verification">{% trans "Email verification"%}</p>
 </h4>
 <div class="auth-steps">
     <div class="step1">{% trans "Enter your phone" as enter_your_phone %}<br>
-        <div class="row phone-verification">
+        <div class="row phone-verification hidden">
             <div class="col-xs-10 col-xs-offset-1 register">
                 <label for="phone">
                     {% trans "Mobile number" %}
@@ -16,7 +16,7 @@
                 {% else %}+7{% endif %}">
             </div>
         </div>
-        <div class="row email-verification hidden">
+        <div class="row email-verification">
             <div class="col-xs-10 col-xs-offset-1 register">
                 <label for="email">
                     {% trans "Email" %}
@@ -30,8 +30,8 @@
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 register">
                 <label for="verification_code">
-                    <p class="phone-verification">{% trans "Code from SMS" %}</p>
-                    <p class="email-verification hidden">{% trans "Code from Email" %}</p>
+                    <p class="phone-verification hidden">{% trans "Code from SMS" %}</p>
+                    <p class="email-verification">{% trans "Code from Email" %}</p>
                 </label>
                 <input type="text" name="verification_code" id="verification_code">
             </div>
