--- a/templates/orders/partials/steps/step_amount.html
+++ b/templates/orders/partials/steps/step_amount.html
@@ -44,10 +44,10 @@
             <div class="col-xs-5 price_box" id="pricebox_rub">
                 <div class="price_box_selectbox_cont">
                     <input type="text" class="price_box_selectbox_cont_textbox amount amount-cash" placeholder="">
-                    <select name='currency_from'
+                    <select name='currency_from' disabled="disabled"
                             class='currency-select currency-from price_box_selectbox_cont_selectbox classic'>
-                        {% for pair in pairs %}
-                            <option value="{{ pair.quote.code }}">{{ pair.quote.code }}</option>
+                        {% for code in quote_currencies %}
+                            <option value="{{ code }}">{{ code }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -59,7 +59,7 @@
 
                 <div class="price_box_selectbox_cont">
                     <input type="text" class="price_box_selectbox_cont_textbox amount amount-coin" placeholder="0.1">
-                    <select name='currency_to'
+                    <select name='currency_to' disabled="disabled"
                             class='currency-select currency-to price_box_selectbox_cont_selectbox classic'>
                        {% for code in base_currencies %}
                            <option value="{{ code }}">{{ code }}</option>
