--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -6,14 +6,18 @@
 {% block main %}
     <div class="page-header">
         <h1>
-            <small>
-                {% if form.user.password == '' %}
-                    {% trans "Set password" %}
-                {% else %}
-                    {% trans "Change password" %}
-                {% endif %}
-            </small>
+            {% if form.user.password == '' %}
+                {% trans "Set password" %}
+            {% else %}
+                {% trans "Change password" %}
+            {% endif %}
         </h1>
+        {% if form.user.profile.anonymous_login %}
+            <h2><small>
+                {% trans "Please note that your username is "%}
+                <strong>{{ form.user.username }}</strong>
+            </small></h2>
+        {% endif %}
     </div>
     <form method="post">
         {% csrf_token %}
