--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -1,12 +1,9 @@
 {% load i18n %}
 
-<h4>
-    <p class="phone-verification hidden">{% trans "Phone verification"%}</p>
-    <p class="email-verification">{% trans "Email verification"%}</p>
-</h4>
-<div class="auth-steps">
+
+<div class="auth-steps user-authenticated">
     <div class="step1">{% trans "Enter your phone" as enter_your_phone %}<br>
-        <div class="row phone-verification hidden">
+        <div class="row phone-verification hidden user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 register">
                 <label for="phone">
                     {% trans "Mobile number" %}
@@ -16,7 +13,7 @@
                 {% else %}+7{% endif %}">
             </div>
         </div>
-        <div class="row email-verification">
+        <div class="row email-verification user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 register">
                 <label for="email">
                     {% trans "Email" %}
@@ -27,7 +24,7 @@
     </div>
 
     <div class="step2 hidden">
-        <div class="row">
+        <div class="row user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 register">
                 <label for="verification_code">
                     <p class="phone-verification hidden">{% trans "Code from SMS" %}</p>
