--- a/templates/orders/partials/steps/step_authentification.html
+++ b/templates/orders/partials/steps/step_authentification.html
@@ -4,8 +4,13 @@
 {% block step_content %}
 
     <div class="register">
+        <h4>
+            <p>{% trans "Verification"%}</p>
+        </h4>
         {% include "accounts/partials/recaptcha.html" %}
+        {% include "orders/partials/steps/partials/step_anonym_auth_fields.html" %}
         {% include "orders/partials/steps/partials/step_authentification_fields.html" %}
+        {% include "orders/partials/steps/partials/step_anonym_auth_buttons.html" %}
         {% include "orders/partials/steps/partials/step_authentification_buttons.html" %}
     </div>
 
