--- a/static/css/style.css
+++ b/static/css/style.css
@@ -601,7 +601,7 @@ body .price_box_ticker .trigger-sell, body .price_box_next_cont .sell-go{
 
 .price_box_next:hover{background-color:#000; color:#FFF;}
 
-.greypanel{background-color:#f4f5f5; padding:30px 0; margin-top: 40px;}
+.greypanel{background-color:#f4f5f5; padding:30px 0; margin-top: 40px; visibility: hidden;}
 
 .greypanel img{width:100%; padding:10px 5px;}
 
