Info messages on auth

--- a/templates/orders/partials/steps/partials/step_anonym_auth_fields.html
+++ b/templates/orders/partials/steps/partials/step_anonym_auth_fields.html
@@ -1,16 +1,12 @@
 {% load i18n %}
 
+<h4 class="user-anonymous">
+    <p>{% trans "Proceed Anonymously "%}</p>
+</h4>
 <div class="auth-steps user-anonymous">
     <div class="col-xs-10 col-xs-offset-1 center controls user-anonymous">
         <span class="btn btn-primary create-anonymous-acc">
             {% trans 'Create Anonymous User' %}
-        </span>
-        <span class="line green user-anonymous user-authenticated">
-            <h4 class="header">
-                <span>
-                    {% trans 'OR' %}
-                </span>
-            </h4>
         </span>
     </div>
     <div class="step2 hidden">
@@ -20,6 +16,10 @@
                     {% trans "Login Key" %}
                 </label>
                 <input type="text" id="user-login-key" readonly="readonly">
+                <a data-toggle="popover" title="{% trans 'What should you do with Login Key?'%}"
+                   data-content="{%trans 'Copy and save. If you loose this key you will not be able to login to this account anymore.'%}">
+                    <i class="fa fa-info-circle" style="font-size:24px"></i>
+                </a>
             </div>
         </div>
     </div>
