--- a/templates/orders/partials/steps/step_confirmation.html
+++ b/templates/orders/partials/steps/step_confirmation.html
@@ -17,18 +17,19 @@
                     <span class="amount cash-amount-confirm"></span> <span class="currency"></span>
                 </div>
             </div>
-            <div class="col-lg-12 confirmation-elem payment-confirm">
+
+            <div class="col-lg-11 confirmation-elem payment-confirm hidden">
                 <span>{% trans "Payment Method" %}</span>
             <div class="payline">  </div>
             </div>
 
-            <div class="col-lg-12 confirmation-elem">
+            <div class="col-lg-12 confirmation-elem hidden">
                 <span class="payment-preference-confirm"></span>
             </div>
-            <div class="col-lg-12 confirmation-elem">
+            <div class="col-lg-12 confirmation-elem hidden">
                 <span class="payment-preference-identifier-confirm"></span>
             </div>
-            <div class="col-lg-12 confirmation-elem payment-fee hidden">
+            <div class="col-lg-12 confirmation-elem payment-fee hidden hidden">
                 <span class="payment-preference-confirm"></span>
                 <span>{% trans "Fee: " %}</span>
                 <span class="payment-preference-fee-percent"></span>%
