anonym naming login to access (#383)

--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 
 <h4 class="user-authenticated">
-    {% trans "Verification"%}
-    <a data-toggle="popover" title="{% trans 'Why should you use verified login?'%}"
+    {% trans "Login"%}
+    <a data-toggle="popover" title="{% trans 'Why should you login?'%}"
        data-content="{%trans 'Logging in will make it easier for you to access your orders in the future. It will also help us to offer you support in case it is needed.'%}">
         <i class="fa fa-info-circle" ></i>
     </a>
