--- a/templates/orders/partials/steps/partials/step_anonym_auth_fields.html
+++ b/templates/orders/partials/steps/partials/step_anonym_auth_fields.html
@@ -6,18 +6,18 @@
 <div class="auth-steps user-anonymous">
     <div class="col-xs-10 col-xs-offset-1 center controls user-anonymous">
         <span class="btn btn-primary create-anonymous-acc">
-            {% trans 'Create Anonymous User' %}
+            {% trans 'Proceed Anonymously' %}
         </span>
     </div>
     <div class="step2 hidden">
         <div class="row user-anonymous">
             <div class="col-xs-10 col-xs-offset-1 register">
                 <label for="user-login-key">
-                    {% trans "Login Key" %}
+                    {% trans "Access Key" %}
                 </label>
                 <input type="text" id="user-login-key" readonly="readonly">
-                <a data-toggle="popover" title="{% trans 'What should you do with Login Key?'%}"
-                   data-content="{%trans 'Copy and save. If you loose this key you will not be able to login to this account anymore.'%}">
+                <a data-toggle="popover" title="{% trans 'What should you do with Access Key?'%}"
+                   data-content="{%trans 'Copy and save. If you loose this key you will not be able to access your orders.'%}">
                     <i class="fa fa-info-circle" style="font-size:24px"></i>
                 </a>
             </div>
