WIP: Inverted tickers (#390)
* LTCETH, LTCBTC and ETHBTC tickers with code fixes

* fix js flaoting point displaying

* WIP: order base Minimal amount from db

* minimal_amount migrations

* fix order amount on tests

* minimal amount tests

* error on similar orders

--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col col-xs-12">
                     {% trans 'Please send' %}
-                    {{ order.amount_quote}} {{ order.pair.quote }}
+                    {{ order.amount_quote.normalize}} {{ order.pair.quote }}
                     {% trans 'to the following address' %}
                 </div>
             </div>
