--- a/templates/orders/partials/steps/partials/step_authentification_fields.html
+++ b/templates/orders/partials/steps/partials/step_authentification_fields.html
@@ -1,12 +1,17 @@
 {% load i18n %}
 
-<h4 class="user-authenticated">
-    {% trans "Login"%}
-    <a data-toggle="popover" title="{% trans 'Why should you login?'%}"
-       data-content="{%trans 'Logging in will make it easier for you to access your orders in the future. It will also help us to offer you support in case it is needed.'%}">
+<div class="user-authenticated user-authenticated-top">
+    <h4>
+        {% trans "Login"%}
+    </h4>
+    <a class="tooltip-icon"
+        data-toggle="tooltip"
+        data-placement="top"
+        title="{%trans 'Logging in will make it easier for you to access your orders in the future. It will also help us to offer you support in case it is needed.'%}">
         <i class="fa fa-info-circle" ></i>
     </a>
-</h4>
+</div>
+
 <div class="auth-steps user-authenticated">
     <div class="step1">{% trans "Enter your phone" as enter_your_phone %}<br>
         <div class="row phone-verification hidden user-authenticated">
@@ -25,13 +30,12 @@
         </div>
         <div class="row email-verification user-authenticated">
             <div class="col-xs-10 col-xs-offset-1 register">
-                <label for="email">
-                    {% trans "Email" %}
-                </label>
-                <input type="email" name="email" id="email" class="email val text-center" size="25">
-                <a data-toggle="popover" title="{% trans 'Do you need to have a registered account?'%}"
-                    data-content="{%trans 'No. If you do not have an account related to this email address it will be created automatically. Otherwise, it will login to existing one.'%}">
-                    <i class="fa fa-info-circle" style="font-size:24px"></i>
+                <input type="email" name="email" id="email" class="email val text-center" placeholder="{% trans 'Enter your email' %}" size="25">
+                <a class="tooltip-icon"
+                    data-toggle="tooltip"
+                    data-placement="left"
+                    title="{%trans 'If you do not have an account related to this email address it will be created automatically. Otherwise, it will login to existing one.'%}">
+                    <i class="fa fa-info-circle" ></i>
                 </a>
             </div>
         </div>
