Make toastr on top of other elements.

--- a/static/scss/components/general.scss
+++ b/static/scss/components/general.scss
@@ -1,3 +1,5 @@
 label, input { text-align: left; cursor: pointer; }
 
 .glyphicon { background-color: transparent; }
+
+#toast-container { z-index: 9999999 !important; }
